--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "express": "3.4.8",
-    "jade": "*"
+    "jade": "*",
+    "nano": "4.4.0"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
