--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "3.4.8",
     "jade": "*",
-    "nano": "4.4.0"
+    "nano": "4.4.0",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
